<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/padding_small"
    app:cardElevation="@dimen/padding_micro"
    app:cardForegroundColor="@android:color/white"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_news_placeholder_small" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/Text.Primary.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginLeft="@dimen/padding_small"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/font_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivImage"
            app:layout_constraintTop_toTopOf="@id/ivImage"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/Text.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginLeft="@dimen/padding_small"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/font_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivImage"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tvSite"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginLeft="@dimen/padding_small"
            android:textSize="@dimen/font_small"
            app:layout_constraintBottom_toBottomOf="@id/tvTag"
            app:layout_constraintStart_toEndOf="@id/ivImage"
            app:layout_constraintTop_toTopOf="@id/tvTag"
            tools:text="@string/site" />

        <TextView
            android:id="@+id/tvTimeAgo"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:layout_marginLeft="@dimen/padding_small"
            android:textSize="@dimen/font_small"
            app:layout_constraintBottom_toBottomOf="@id/tvTag"
            app:layout_constraintStart_toEndOf="@id/tvSite"
            app:layout_constraintTop_toTopOf="@id/tvTag"
            tools:text="@string/time_ago" />

        <TextView
            android:id="@+id/tvTag"
            style="@style/Text.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_micro"
            android:background="@drawable/bg_gray_outline"
            android:padding="6dp"
            android:textSize="@dimen/font_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            tools:text="@string/tag" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>